added openmp Opt,cuda formatted

--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp.ipynb
@@ -445,98 +445,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "# Optional Exercise\n",
-    "\n",
-    "## collapse clause\n",
-    "\n",
-    "Specifying the collapse(n) clause takes the next n tightly-nested loops, folds them into one, and applies the OpenMP directives to the new loop. Collapsing loops means that two loops of trip counts N and M respectively will be automatically turned\n",
-    "into a single loop with a trip count of N times M. By collapsing two or more parallel loops into a single\n",
-    "loop the compiler has an increased amount of parallelism to use when mapping the code to the device. On\n",
-    "highly parallel architectures, such as GPUs, this can result in improved performance\n",
-    "\n",
-    "Try using the collapse clause and observe any performance difference. How much this optimization will speed-up the code will vary according to the application and the target accelerator, but it is not uncommon to see large speed-ups by using collapse on loop nests.\n",
-    "\n",
-    "Sample usage of collapse clause is given as follows:\n",
-    "\n",
-    "```cpp\n",
-    "#pragma omp target teams distribute parallel for collapse(2) \n",
-    "for (int i = 0; i < N; i++ )\n",
-    "{\n",
-    "    for (int j=0;j< N;j++)\n",
-    "        < loop code >\n",
-    "} \n",
-    "```\n",
-    "\n",
-    "Now, lets start modifying the original code and add the collapse clause. From the top menu, click on *File*, and *Open* `rdf.cpp` and `dcdread.h` from the current directory at `C/source_code/openmp` directory. Remember to **SAVE** your code after changes, before running below cells."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#compile for Tesla GPU\n",
-    "!cd ../../source_code/openmp && nvc++ -mp=gpu -Minfo=mp -o rdf rdf.cpp "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Make sure to validate the output by running the executable and validate the output."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Run on Nvidia GPU and check the output\n",
-    "!cd ../../source_code/openmp && ./rdf && cat Pair_entropy.dat"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The output should be the following:\n",
-    "\n",
-    "```\n",
-    "s2 value is -2.43191\n",
-    "s2bond value is -3.87014\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#profile and see output of nvptx\n",
-    "!cd ../../source_code/openmp && nsys profile -t nvtx,cuda --stats=true --force-overwrite true -o rdf_collapse ./rdf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_collapse.qdrep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
-    "\n",
-    "<img src=\"../images/openmp_gpu_collapse.png\">\n",
-    "\n",
-    "Compare the execution time for the `Pair_Calculation` from the NVTX row (annotated in Red rectangle in the example screenshot) with the previous section. It is clear the using collapse clause improved the performance by extracting more parallelisim.\n",
-    "\n",
-    "Feel free to checkout the [solution](../../source_code/openmp/SOLUTION/rdf_offload_collapse.cpp) to help you understand better."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Post-Lab Summary\n",
     "\n",
     "If you would like to download this lab for later viewing, it is recommend you go to your browsers File menu (not the Jupyter notebook file menu) and save the complete web page.  This will ensure the images are copied down as well. You can also execute the following cell block to create a zip-file of the files you've been working on, and download it with the link below."
@@ -560,6 +468,10 @@
    "source": [
     "**After** executing the above zip command, you should be able to download the zip file [here](../nways_files.zip). Let us now go back to parallelizing our code using other approaches.\n",
     "\n",
+    "<!--\n",
+    "**IMPORTANT**: If you would like to continue and optimize this application further with OpenMP, please click on the **NEXT** button, otherwise click on **HOME** to go back to the main notebook for *N ways of GPU programming for MD* code.\n",
+    "-->\n",
+    "\n",
     "**IMPORTANT**: Please click on **HOME** to go back to the main notebook for *N ways of GPU programming for MD* code.\n",
     "\n",
     "-----\n",
@@ -568,6 +480,8 @@
     "\n",
     "-----\n",
     "\n",
+    "<!-- <p style=\"text-align:center;border:3px; border-style:solid; border-color:#FF0000  ; padding: 1em\"> <a href=../../../nways_MD_start.ipynb>HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"float:center\"> <a href=nways_openmp_opt.ipynb>NEXT</a></span> </p>\n",
+    "-->\n",
     "\n",
     "# Links and Resources\n",
     "[OpenMP Programming Model](https://computing.llnl.gov/tutorials/openMP/)\n",
@@ -575,6 +489,7 @@
     "[OpenMP Target Directive](https://www.openmp.org/wp-content/uploads/openmp-examples-4.5.0.pdf)\n",
     "\n",
     "[NVIDIA Nsight System](https://docs.nvidia.com/nsight-systems/)\n",
+    "\n",
     "\n",
     "**NOTE**: To be able to see the Nsight System profiler output, please download Nsight System latest version from [here](https://developer.nvidia.com/nsight-systems).\n",
     "\n",
