--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp_opt.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp_opt.ipynb
@@ -61,7 +61,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/rdf_offload.qdrep) and open it via the GUI.\n",
+    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/rdf_offload.qdrep) and open it via the GUI. Then profile the specific kernel `pair_gpu` with Nsight compute. We use this as the base to compare with the next steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#profile with nsight compute\n",
+    "!cd ../../source_code/openmp && ncu --set full --launch-skip 0 --launch-count 1 -k pair_gpu -o rdf_offload ./rdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_offload.ncu-rep) and open it via the GUI.\n",
     "\n",
     "## Further Optimization\n",
     "Currently both our distributed and workshared parallelism comes from the same loop. In other words, in this example, we used teams and distribute to spread parallelism across the full GPU. As a result, all of the parallelism comes from the outer loop. There are multiple ways to increase parallelism: \n",
@@ -157,6 +174,29 @@
    "source": [
     "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_offload_split.qdrep) and open it via the GUI. Compare the execution time for the `Pair_Calculation` from the NVTX row with the previous section and see how much the performance was improved.\n",
     "\n",
+    "Let's dig deeper and profile the kernel with Nsight Compute and compare it with the base version."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#profile with nsight compute\n",
+    "!cd ../../source_code/openmp && ncu --set full --launch-skip 0 --launch-count 1 -k pair_gpu -o rdf_offload_split ./rdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's checkout Nsight compute report. [Download the profiler output](../../source_code/openmp/rdf_offload_split.ncu-rep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
+    "\n",
+    "<img src=\"../images/compute_split.png\">\n",
+    "\n",
+    "When compared to the base version, we achieved 41% improvement in SM utilization and 358% utilization in memory.\n",
+    "\n",
     "Feel free to checkout the [solution](../../source_code/openmp/SOLUTION/rdf_offload_split.cpp) to help you understand better."
    ]
   },
@@ -243,8 +283,40 @@
     "\n",
     "Compare the execution time for the `Pair_Calculation` from the NVTX row (annotated in Red rectangle in the example screenshot) with the previous section. It is clear the using collapse clause improved the performance by extracting more parallelism. Please note when you compare the two methods explored here, one may give better results than the other.\n",
     "\n",
-    "Feel free to checkout the [solution](../../source_code/openmp/SOLUTION/rdf_offload_collapse.cpp) to help you understand better.\n",
+    "Let's dig deeper and profile the kernel with Nsight Compute and compare it with the base version."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#profile with nsight compute\n",
+    "!cd ../../source_code/openmp && ncu --set full --launch-skip 0 --launch-count 1 -k pair_gpu -o rdf_collapse ./rdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's checkout the Nsight compute report. [Download the profiler output](../../source_code/openmp/rdf_collapse.ncu-rep) and open it via the GUI. Have a look at the example expected profiler report below (yellow line is the base version, blue is the current):\n",
     "\n",
+    "<img src=\"../images/compute_collapse.png\">\n",
+    "\n",
+    "When compared to the base version (using baseline feature on Nsight compute), we achieved 128% improvement in SM utilization and 66% utilization in memory. We can also see the improvement and better utilization in the roofline analysis (see example screenshot below).\n",
+    "\n",
+    "<img src=\"../images/compute_collapse_roofline.png\">\n",
+    "\n",
+    "Dots with the blue outline is the optimzied version and the ones with the orange outline is the base version.\n",
+    "\n",
+    "Feel free to checkout the [solution](../../source_code/openmp/SOLUTION/rdf_offload_collapse.cpp) to help you understand better."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### `num_teams(n)` and `num_threads`\n",
     "\n",
     "When using the `distribute parallel for` construct, the for loop is distributed across all threads for all teams of the current teams region. For example, if there are 10 teams, and each team consists of 256 threads, the loop will be distributed across 2560 threads. You can explicitly specify the number of threads to be created in the team using the `num_threads(m)`. Moreover, you can specify the maximum number of teams created by using `num_teams(n)` (the actual number of teams may be smalled than this number). You can add these attributes to the `collpase(x)` clause or `parallel for` clause. \n",
@@ -317,7 +389,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_offload_num.qdrep) and open it via the GUI. Feel free to checkout the example [solution](../../source_code/openmp/SOLUTION/rdf_offload_collapse_num.cpp) to help you understand better."
+    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_offload_num.qdrep) and open it via the GUI. Let's dig deeper and profile the `pair_gpu` kernel with Nsight compute and compare it with the baseline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#profile with nsight compute\n",
+    "!cd ../../source_code/openmp && ncu --set full --launch-skip 0 --launch-count 1 -k pair_gpu -o rdf_collapse_num ./rdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's checkout the Nsight compute report. [Download the profiler output](../../source_code/openmp/rdf_collapse_num.ncu-rep) and open it via the GUI. Feel free to checkout the example [solution](../../source_code/openmp/SOLUTION/rdf_offload_collapse_num.cpp) to help you understand better."
    ]
   },
   {
