--- a/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/doconcurrent/nways_doconcurrent.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/doconcurrent/nways_doconcurrent.ipynb
@@ -36,8 +36,6 @@
     "\n",
     "Fortran developers have  been able to accelerate their programs using CUDA Fortran, OpenACC or OpenMP. Now with the support of DO CONCURRENT on GPU with NVIDIA HPC SDK, compiler automatically accelerates loops using DO CONCURRENT, allowing developers to get the benefit of acclerating on NVIDIA GPUs using ISO Standard Fortran without any extensions, directives, or non-standard libraries. You can now write standard Fortran, remaining fully portable to other compilers and systems, and still benefit from the full power of NVIDIA GPUs\n",
     "\n",
-    "At the core of the C++ Standard Template Library are following three well-structured components \n",
-    "\n",
     "For our code to make *Pair Calculation* all that’s required is expressing loops with DO CONCURRENT. The example below will introduce you to the syntax of DO CONCURRENT \n",
     "\n",
     "Sample vector addition codeis shown in code below:\n",
@@ -100,7 +98,7 @@
    "source": [
     "### Compile and Run for Multicore\n",
     "\n",
-    "Now that we have added a DO-CONCURRENT code, let us try compile the code. We will be using NVIDIA HPC SDK for this exercise. The flags used for enabling parallel STL target offloading are as follows:\n",
+    "Now that we have added a DO-CONCURRENT code, let us try compile the code. We will be using NVIDIA HPC SDK for this exercise. The flags used for enabling DO-CONCURRENT are as follows:\n",
     "\n",
     "- `stdpar` : This flag tell the compiler to enable Parallel DO-CONCURRENT for a respective target\n",
     "- `stdpar=multicore` will allow us to compile our code for a multicore\n",
@@ -114,14 +112,22 @@
    "outputs": [],
    "source": [
     "#Compile the code for muticore\n",
-    "!cd ../../source_code/doconcurrent && nvfortran -stdpar=multicore -Minfo -o rdf nvtx.f90 rdf.f90 -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.11/cuda/11.0/include -L/opt/nvidia/hpc_sdk/Linux_x86_64/20.11/cuda/11.0/lib64 -lnvToolsExt"
+    "!cd ../../source_code/doconcurrent && nvfortran -stdpar=multicore -Minfo -o rdf nvtx.f90 rdf.f90 -I/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/include -L/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/lib64 -lnvToolsExt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you compile this code with **-Minfo**, you can see how the compiler performs the parallelization.Make sure to validate the output by running the executable and validate the output."
+    "If you compile this code with **-Minfo**, you can see how the compiler performs the parallelization.\n",
+    "```\n",
+    "rdf:\n",
+    "     80, Memory zero idiom, loop replaced by call to __c_mzero8\n",
+    "     92, Generating Multicore code\n",
+    "         92, Loop parallelized across CPU threads\n",
+    "```\n",
+    "\n",
+    "Make sure to validate the output by running the executable and validate the output."
    ]
   },
   {
@@ -160,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/stdpar/rdf_doconcurrent_multicore.qdrep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
+    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/doconcurrent/rdf_doconcurrent_multicore.qdrep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
     "\n",
     "<img src=\"../images/stdpar_multicore.png\">\n",
     "\n",
@@ -168,7 +174,7 @@
     "### Compile and run for Nvidia GPU\n",
     "\n",
     "Without changing the code now let us try to recompile the code for NVIDIA GPU and rerun.\n",
-    "GPU acceleration of C++ Parallel Algorithms is enabled with the `-⁠stdpar` command-line option to NVC++. If `-⁠stdpar `is specified, almost all algorithms that use a parallel execution policy are compiled for offloading to run in parallel on an NVIDIA GPU.\n",
+    "GPU acceleration of DO-CONCURRENT is enabled with the `-⁠stdpar` command-line option to NVC++. If `-⁠stdpar `is specified, almost all loops with DO-CONCURRENT are compiled for offloading to run in parallel on an NVIDIA GPU.\n",
     "\n",
     " **Understand and analyze** the solution present at:\n",
     "\n",
@@ -184,13 +190,21 @@
    "outputs": [],
    "source": [
     "#compile for Tesla GPU\n",
-    "!cd ../../source_code/doconcurrent && nvfortran -stdpar=gpu -Minfo -acc -o rdf nvtx.f90 rdf.f90 -L/opt/nvidia/hpc_sdk/Linux_x86_64/20.11/cuda/11.0/lib64 -lnvToolsExt"
+    "!cd ../../source_code/doconcurrent && nvfortran -stdpar=gpu -Minfo -acc -o rdf nvtx.f90 rdf.f90 -L/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/lib64 -lnvToolsExt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If you compile this code with -Minfo, you can see how the compiler performs the parallelization.\n",
+    "```rdf:\n",
+    "     80, Memory zero idiom, loop replaced by call to __c_mzero8\n",
+    "     92, Generating Tesla code\n",
+    "         92, Loop parallelized across CUDA thread blocks, CUDA threads(4) blockidx%y threadidx%y\n",
+    "             Loop parallelized across CUDA thread blocks, CUDA threads(32) ! blockidx%x threadidx%x\n",
+    "```\n",
+    "\n",
     "Make sure to validate the output by running the executable and validate the output."
    ]
   },
